hiding save btn, edit btn and input field. and fixed some alignments in schedule screen.

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -160,8 +160,11 @@ div.ex3 {
     padding-bottom: 20px;
 }
 @media (max-width: 1440px) {
-  .schedule-section{
+  .schedule-section {
     padding: 20px 20px;
+  }
+  .patients-reschedule-time{
+    margin: 20px 20px !important;
   }
 }
 @media (width: 1440px) {
@@ -241,7 +244,7 @@ div.ex3 {
   border: 1px solid #ebebeb;
   padding: 0px 10px;
   height: 45px;
-  color: #525358;
+  color: #333333;
   font-size: 15px;
   background-color: #f5f5f5;
 }
@@ -251,7 +254,7 @@ div.ex3 {
 .schedule-inputclass {
   background-color: #fff;
   border: 1px solid #fff;
-  cursor: not-allowed !important;
+  // cursor: not-allowed !important;
   border-radius: 4px;
   padding: 0px 10px;
   height: 45px;
@@ -317,7 +320,7 @@ hr {
   border: 1px solid #2faa9a;
 }
 .plabel {
-  color: #4a4a4a;
+  color: #4A4A4A;
   //background-color: white;
   font-size: 15px; // schedule screen location
 }
@@ -959,7 +962,8 @@ ul.menuclass li.active a {
 
 .cstm-border-bottom {
   margin-bottom: 10px;
-  border-bottom: 1px solid #41b6a6;
+  margin-top: -1px;
+  border-top: 1px solid #41b6a6;
 }
 .cstm-padding{
   padding-left: 38px;
@@ -982,6 +986,7 @@ ul.menuclass li.active a {
   width: 120px;
   height: 45px;
   border-radius: 3px;
+  padding: 8px 20px;
 }
 .form-control.time:hover{
   border: 1px solid #41b6a6;
@@ -1023,3 +1028,48 @@ ul.menuclass li.active a {
 body.loadactive {
   overflow: hidden !important;
 }
+.numeric.form-control{
+  width: 67px;
+  margin: 0px 8px;
+  text-align: center;
+  border: 1px solid #dedede;
+  background-color: #f5f5f5;
+  color: #74757E ;
+  cursor: text !important;
+  height: 45px;
+  border-radius: 3px;
+  margin-top: -10px;
+  font-size: 16px;
+}
+@media (max-width: 1024px){
+  .numeric.form-control{
+    margin-top: 0px;
+  }
+}
+.numeric.form-control:hover{
+  border: 1px solid #41b6a6;
+}
+.patients-reschedule-time {
+  margin: 0;
+  margin-left: 32px;
+  margin-top: 20px;
+}
+.patients-reschedule-time p{
+  display: contents;
+  font-size: 16px;
+  color: #4A4A4A;
+  margin-bottom: 0;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+input[type="time"]::-webkit-calendar-picker-indicator { background: none; display:none; }
+
