--- a/src/assets/cstm.material.scss
+++ b/src/assets/cstm.material.scss
@@ -20,6 +20,11 @@
   height: 25px !important;
   width: 25px !important;
   top: -3px !important;
+  border: 1px solid #dedede;
+  transition: border 0.1s, border-color 0.2s !important;
+}
+::ng-deep .mat-radio-outer-circle:hover{
+  border: 1px solid #41b6a6;
 }
 ::ng-deep .mat-radio-container{
   width: 30px !important;
@@ -28,8 +33,14 @@
 // mat-form-field outline color
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
   background-color: #fff !important;
-  // border-radius: 6px !important;
   color: #41b6a6 !important;
+}
+::ng-deep
+  .mat-form-field-appearance-outline:hover
+  .mat-form-field-outline,
+.mat-form-field-appearance-outline:active .mat-form-field-outline {
+  background: #ebf6f5 !important;
+  border: none !important;
 }
 ::ng-deep .mat-select-arrow{
   color: #41b6a6 !important;
